tests/option_2_tests/pass/fact.gpy
fn fact(x: i32) -> i32 {
  if 0 == x then 1 else x * fact(x - 1)
}

fact(5)