tests/option_2_tests/fail/funptr.gpy
fn f(x: i32) -> i32 { x }
%
call(@f, 3)